fix: Header top-margin issue on small to medium screens.

--- a/css/index.css
+++ b/css/index.css
@@ -158,10 +158,7 @@ footer .logo::before {
     content: 'ninja'; } }
 header {
   margin-top: 80px; }
-  @media screen and (min-width: 501px) {
-    header {
-      margin-top: 0; } }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1000px) {
     header {
       margin-top: 110px; } }
   @media screen and (max-width: 350px) {
