--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,11 +10,7 @@
 header {
 	margin-top: 80px;
 
-	@media screen and (min-width: $screen-sm-min) {
-		margin-top: 0;
-	}
-
-	@media screen and (min-width: $screen-md-min) {
+	@media screen and (min-width: $screen-lg) {
 		margin-top: 110px;
 	}
 
